@@ -204,7 +204,7 @@ dist_man_MANS = doc/runtest.1
 info_TEXINFOS = doc/dejagnu.texi
 
 DOCBOOK2PDF = @DOCBOOK2PDF@
-DOCBOOK2RTF= = @DOCBOOK2RTF@
+DOCBOOK2RTF = @DOCBOOK2RTF@
 DOCBOOK2PS = @DOCBOOK2PS@
 DOCBOOK2HTML = @DOCBOOK2HTML@
 DOCBOOK2TEXI = @DOCBOOK2TEXI@
